# local_pic_sorter

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/shutter_sorter/: main.py
tests/: __init__.py
