[tool.poetry]
name = "local_pic_sorter"
version = "0.1.0"
description = "A local-first photo sorting tool for organizing images on disk"
authors = ["Ricardo Ruehmer r.ruehmer@gmx.de"]
readme = "README.md"
packages = [
    { include = "shutter_sorter", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
pillow = "^10.4.0"
pillow-heif = "^0.22.0"
exif = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
local-pic-sorter = "shutter_sorter.main:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
